[gd_scene load_steps=19 format=3 uid="uid://cs6lqxjmv25nc"]

[ext_resource type="Script" path="res://Components/create_upgrade_items.gd" id="1_414iy"]
[ext_resource type="StyleBox" uid="uid://swwmbq60e0jw" path="res://Resources/CustomResource/SignInButton.tres" id="2_02kcy"]
[ext_resource type="StyleBox" uid="uid://dhmtqsdak3k75" path="res://Resources/CustomResource/create_upgrade_items.tres" id="2_jdfxi"]
[ext_resource type="Texture2D" uid="uid://cbrgclqhmyjde" path="res://Resources/Item Upgrade Textures/general_tier1.png" id="4_fjli5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_itb4x"]
bg_color = Color(0.0313726, 0.0196078, 0.0941176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ims8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thsov"]
bg_color = Color(0.0313726, 0.0196078, 0.0941176, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8dcdu"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvaog"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gildr"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ymf0"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oq3c5"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7gja"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tr0pe"]
content_margin_left = 20.0
content_margin_right = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bryb5"]
content_margin_left = 0.0
bg_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lw2dl"]
bg_color = Color(0.388235, 0.270588, 0.929412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_atm1w"]
bg_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40jjm"]
bg_color = Color(0.0999859, 0.099986, 0.099986, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 2
shadow_offset = Vector2(4, 4)

[node name="CreateUpgradeItems" type="VBoxContainer" groups=["TaskWindows"]]
auto_translate_mode = 1
custom_minimum_size = Vector2(1443, 986)
size_flags_horizontal = 3
script = ExtResource("1_414iy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_itb4x")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.075
anchor_right = 0.993763
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.223529, 0.992157, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ims8")
text = "CREATE UPGRADE ITEM"
uppercase = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer/Label"]
auto_translate_mode = 1
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
anchor_left = 1.07333
anchor_right = 1.20667
anchor_bottom = 0.909091
expand_mode = 1
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Panel" type="Panel" parent="."]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_thsov")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.010395
anchor_top = 0.0530786
anchor_right = 0.991684
anchor_bottom = 0.980892
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.223529, 0.992157, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ims8")
text = "UPDATES POSTED CARD AND LISTED CARDS from the blockchain"
uppercase = true

[node name="CardUpgradeSelection" type="OptionButton" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" groups=["UpgradeItemDropdowns"]]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(168, 34)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_8dcdu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_fvaog")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_gildr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_2ymf0")
theme_override_styles/hover = SubResource("StyleBoxFlat_oq3c5")
theme_override_styles/normal = SubResource("StyleBoxFlat_n7gja")
item_count = 1
popup/item_0/text = "General"

[node name="TierField" type="OptionButton" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" groups=["UpgradeItemDropdowns"]]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(168, 34)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_8dcdu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_fvaog")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_gildr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_2ymf0")
theme_override_styles/hover = SubResource("StyleBoxFlat_oq3c5")
theme_override_styles/normal = SubResource("StyleBoxFlat_n7gja")
item_count = 4
popup/item_0/text = "Tier1"
popup/item_1/text = "Tier2"
popup/item_1/id = 1
popup/item_2/text = "Tier3"
popup/item_2/id = 2
popup/item_3/text = "Tier4"
popup/item_3/id = 3

[node name="ExpGivenField" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(168, 34)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = ExtResource("2_jdfxi")
theme_override_styles/read_only = ExtResource("2_jdfxi")
theme_override_styles/normal = SubResource("StyleBoxFlat_tr0pe")
placeholder_text = "Experience"
alignment = 2
editable = false
caret_blink = true

[node name="QuantityField" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(168, 34)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = ExtResource("2_jdfxi")
theme_override_styles/normal = SubResource("StyleBoxFlat_tr0pe")
placeholder_text = "Quantity"
alignment = 2
caret_blink = true

[node name="CreateUpgradeItemButton" type="Button" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
custom_minimum_size = Vector2(130, 34)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxFlat_bryb5")
theme_override_styles/hover = SubResource("StyleBoxFlat_lw2dl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_atm1w")
theme_override_styles/normal = ExtResource("2_02kcy")
text = "SUBMIT"

[node name="ErrorMessageLabel" type="Label" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
modulate = Color(0.862745, 0, 0, 1)
custom_minimum_size = Vector2(168, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_40jjm")

[node name="CardUpgradeItemIcon" type="TextureRect" parent="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fjli5")
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3

[connection signal="item_selected" from="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/TierField" to="." method="_on_tier_field_item_selected"]
[connection signal="text_changed" from="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/QuantityField" to="." method="_on_quantity_field_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/CreateUpgradeItemButton" to="." method="_on_create_upgrade_item_button_pressed"]
